--- a/branches/megamerge/mtams/mtams-war/web/applicationHome.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/applicationHome.xhtml
@@ -35,7 +35,7 @@
                         <fieldset>
                             <legend><h4>Motivation Form</h4></legend>
                             <p:button value="Create Motivation Form" outcome="#{appBean.goCreateMotivation()}" disabled="false" />
-                            <p:button value="View/Edit Motivation Form" outcome="#{appBean.goViewMotivation()}" disabled="false" rendered="true" />
+                            <p:button value="View/Edit Motivation Form" outcome="#{appBean.goEditMotivation()}" disabled="false" rendered="true" />
                         </fieldset>
                     </p:panel>
 
