--- a/mtams/mtams-war/web/forexView.xhtml
+++ b/mtams/mtams-war/web/forexView.xhtml
@@ -129,7 +129,7 @@
                             </h:panelGrid>   
 
                         </fieldset> 
-                        
+                        <p:button value="Back" outcome="#{appBean.goApplicationHome()}" styleClass="button-left"/>
                     </p:panel> 
 
                 </h:form>
