added back buttons

--- a/branches/megamerge/mtams/mtams-war/web/forexCreate.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/forexCreate.xhtml
@@ -505,8 +505,9 @@
                                     <p:message for="reasonTr"/>
                                     
                                 </h:panelGrid>  
-                                <p:commandButton value="Cancel" ajax="false" action="#{foreignBean.toAppHome()}" styleClass="button-right"/>
-                                    <p:commandButton value="Submit" ajax="false" action="#{foreignBean.createForm()}" styleClass="button-right"/>  
+                                <p:commandButton value="Submit" ajax="false" action="#{foreignBean.createForm()}" styleClass="button-right"/>  
+                                <p:commandButton value="Cancel" ajax="false" action="#{foreignBean.toAppHome()}" styleClass="button-left"/>
+                                
                             </p:panel>  
                         </p:tab>  
 
