--- a/mtams/mtams-war/web/userHome.xhtml
+++ b/mtams/mtams-war/web/userHome.xhtml
@@ -17,7 +17,7 @@
                         <p:button outcome="#{userBean.goNewApp()}" icon="ui-icon-plus" id="createButton"  title="Create Button" value="Create New" />
 
                         <h4>Your application</h4>
-                        <p:dataTable id="applications" var="app" value="#{userBean.allApps}" rowKey="#{app.idapplication}" selectionMode="single" selection="#{userBean.selectedApp}" emptyMessage="No Applications have been created">  
+                        <p:dataTable id="applications" var="app" value="#{userBean.allApps}" paginator="true" rows="10" rowKey="#{app.idapplication}" selectionMode="single" selection="#{userBean.selectedApp}" emptyMessage="No Applications have been created">  
                             <p:ajax event="rowSelect" listener="#{userBean.view()}" 
                                     update=":userHomeForm" />
                             <p:column headerText="Description" style="width:35%">  
@@ -39,17 +39,17 @@
                         </p:dataTable>
                         <br /><br />
                         <h4>Applications sent for approval</h4>
-                        <p:dataTable id="approvals" var="appr" value="#{userBean.allApproved}" emptyMessage="No Applications have been created">  
+                        <p:dataTable id="approvals" var="appr" value="#{userBean.allApproved}" paginator="true" rows="10"  emptyMessage="No Applications has been send for approval">  
 
                             <p:column headerText="Application Name" style="width:35%">  
                                 <h:outputText value="#{appr.applicationIdapplication.description}" />  
                             </p:column>  
 
-                            <p:column headerText="Approved(1)/Declined (2)" style="width:33%">  
+                            <p:column headerText="Application Stage" style="width:33%">  
                                 <h:outputText value="#{appr.sectionid}" />  
                             </p:column>  
 
-                            <p:column headerText="Approved/Declined By" style="width:32%">  
+                            <p:column headerText="Waiting To Be Approved By" style="width:32%">  
                                 <h:outputText value="#{appr.fromsection}" />  
                             </p:column>
                         </p:dataTable>
