--- a/branches/megamerge/mtams/mtams-war/web/userHome.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/userHome.xhtml
@@ -17,7 +17,7 @@
                         <p:button outcome="#{userBean.goNewApp()}" icon="ui-icon-plus" id="createButton"  title="Create Button" value="Create New" />
 
                         <h4>Your application</h4>
-                        <p:dataTable id="applications" var="app" value="#{userBean.allApps}" paginator="true" rows="10" rowKey="#{app.idapplication}" selectionMode="single" selection="#{userBean.selectedApp}" emptyMessage="No Applications have been created">  
+                        <p:dataTable id="applications" var="app" value="#{userBean.allApps}" paginator="true" rows="10" paginatorAlwaysVisible="false" rowKey="#{app.idapplication}" selectionMode="single" selection="#{userBean.selectedApp}" emptyMessage="No Applications have been created">  
                             <p:ajax event="rowSelect" listener="#{userBean.view()}" 
                                     update=":userHomeForm" />
                             <p:column headerText="Description" style="width:35%">  
@@ -39,7 +39,7 @@
                         </p:dataTable>
                         <br /><br />
                         <h4>Applications sent for approval</h4>
-                        <p:dataTable id="approvals" var="appr" value="#{userBean.allApproved}" paginator="true" rows="10"  emptyMessage="No Applications has been send for approval">  
+                        <p:dataTable id="approvals" var="appr" value="#{userBean.allApproved}" paginator="true" rows="10" paginatorAlwaysVisible="false" emptyMessage="No Applications has been send for approval">  
 
                             <p:column headerText="Application Name" style="width:35%">  
                                 <h:outputText value="#{appr.applicationIdapplication.description}" />  
