update stage level

--- a/branches/megamerge/mtams/mtams-war/web/accountCreate.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/accountCreate.xhtml
@@ -24,7 +24,7 @@
                                     <f:validateLength minimum="3"/>
                                     <p:ajax update="msgUser" event="keyup" async="true"/>                            
                                 </p:inputText>
-                                <p:watermark for="username" value="Username *"/>
+                                <p:watermark for="username" value="a2314745 *"/>
                                 <p:message for="username" id="msgUser"/>
 
 
