--- a/branches/megamerge/mtams/mtams-war/web/finalCostingView.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/finalCostingView.xhtml
@@ -13,7 +13,7 @@
             <ui:define name="content">
                 <h:form>
                     <p:panel id="ViewFinalCostingPanel" header="View Final Costing" >
-                        <p:button outcome="#{appBean.goEdit()}" id="editButton"  title="Edit Button" value="Edit" />
+                        <p:button outcome="#{finalCBean.goEdit()}" id="editButton"  title="Edit Button" value="Edit" />
 
 
                         <fieldset><legend><h4>Final Costing Details</h4></legend> 
