fixed so they now are not hardcoded finalcosting app and account ids for testing. Create now goes home to approval home
done with Edit and view plus css changes in sytles.css. 
removed authorisation from edit, and view. Until I can fix the persistance update in the ejb handler.

--- a/branches/megamerge/mtams/mtams-war/web/tests/lookuptest.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/tests/lookuptest.xhtml
@@ -30,7 +30,7 @@ and open the template in the editor.
                             <br />
                             <p:outputLabel id="CVal" value="string currency object : #{dataLookUpBean.selectedCurrencyString}" />
                             <br />
-                            <p:outputLabel id="CValS" value="string currency object : #{dataLookUpBean.aCurrencySelection}" />
+                            <p:outputLabel id="CValS" value="string currency object : #{dataLookUpBean.curSelect}" />
                         </h:form>
 
                     </div>
@@ -317,7 +317,8 @@ country
                                          filteredValue="#{dataLookUpBean.currencyFilteredList}"
                                          widgetVar="currencies"
                                          emptyMessage="No data matches your criteria"
-                                         selection="#{dataLookUpBean.aCurrencySelection}" selectionMode="single" scrollRows="20"  
+                                         selection="#{dataLookUpBean.curSelect}" 
+                                         selectionMode="single" scrollRows="20"  
                                          scrollable="true" liveScroll="true" scrollHeight="150"
 
                                          > 
@@ -374,7 +375,8 @@ country
                                     <p>There are this many : #{dataLookUpBean.currencyCount}</p>
                                     <p:commandButton value="Hide" type="button" 
                                                      onclick="dlgcurrency.hide()" 
-                                                     actionListener="#{dataLookUpBean.CurSel()}" update=":CurencyVal:CVal">
+                                                     actionListener="#{dataLookUpBean.CurSel()}" 
+                                                     update=":CurencyVal:CVal">
 
                                         <p:ajax update=":CurencyVal:CVal" 
                                                 listener="#{dataLookUpBean.CurSel()}"/>
