--- a/mtams/mtams-war/web/authorizerHome.xhtml
+++ b/mtams/mtams-war/web/authorizerHome.xhtml
@@ -30,7 +30,7 @@
                             </p:column>  
 
                             <p:column headerText="Status" style="width:32%">  
-                                <h:outputText value="Approval Table below" />  
+                                <h:outputText value="#{app.travelerprofileIdtravelerprofile.firstname} #{app.travelerprofileIdtravelerprofile.familyname}" />  
                             </p:column>
 
 
