--- a/mtams/mtams-war/web/motivationalView.xhtml
+++ b/mtams/mtams-war/web/motivationalView.xhtml
@@ -30,7 +30,7 @@
                                 <h:outputText  value="#{motivBean.motiView.motivation}"/>
 
                                 <h:outputText value="budget Available: " /> 
-                                <h:outputText  value="#{motivBean.motiView.budget}"/>
+                                <h:outputText  value="#{motiView.budget2}"/>
                             </h:panelGrid>
 
                         </fieldset>
