changes made to applicationHome to accommodate conferenceCreate.xhtml access. Also changes made to ConferenceBean.java to make compatible with current database structure. Also changed ConferenceBean.java to use application id to access the correct conference form instead of id. Another change made to conferenceCreate.xhtml to use p:messages instead of p:growl to match the rest of the system.

--- a/branches/megamerge/mtams/mtams-war/web/applicationHome.xhtml
+++ b/branches/megamerge/mtams/mtams-war/web/applicationHome.xhtml
@@ -24,7 +24,7 @@
                         </fieldset>
                         <fieldset>
                             <legend><h4>Conference Attendance Request</h4></legend>
-                            <p:button value="Create Conference Attendance Request Form" disabled="true" />
+                            <p:button value="Create Conference Attendance Request Form" disabled="false" outcome="#{appBean.goConference()}" />
                             <p:button value="View/Edit Conference Attendance Request Form" disabled="true" rendered="false" />
                         </fieldset>
                         <fieldset>
