--- a/mtams/mtams-war/web/applicationHome.xhtml
+++ b/mtams/mtams-war/web/applicationHome.xhtml
@@ -24,7 +24,7 @@
                         </fieldset>
                         <fieldset>
                             <legend><h4>Conference Attendance Request</h4></legend>
-                            <p:button value="Create Conference Attendance Request Form" disabled="true" />
+                            <p:button value="Create Conference Attendance Request Form" disabled="false" outcome="#{appBean.goConference()}" />
                             <p:button value="View/Edit Conference Attendance Request Form" disabled="true" rendered="false" />
                         </fieldset>
                         <fieldset>
